# celery-backend

./: .env.devel  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  run.sh  xxx-analysis_worker.py  xxx-openai.py
_arch/: files_listed_on_home.html
backend/: dependencies.py  main.py
backend/api/api_v1/: routers.py
backend/api/api_v1/endpoints/: artefacts_endpoints.py  artifacts_endpoints.py  celery_endpoints.py  customer_endpoints.py  db_endpoints.py  documents_endpoints.py  files_endpoints.py  llm_endpoints.py  rag_endpoints.py  utils_endpoints.py  xxx-prompt.txt
backend/config/: __init__.py
backend/core/: celery.py
backend/db/schemas/: artefacts_schemas.py  customers_schemas.py  documents_schemas.py  files_schemas.py  rabbitmq_schemas.py  rag_schemas.py
backend/utils/: extract_text.py  generate_preview.py  helpers.py  prompt_generators.py
config/: nginx.conf
data/mapping/: docu-schemas_eterny.io.json
examples/: example-openai-simple.py  example-openai-structured-output.py  example-streaming-llm.html  example-streaming-rag.html
prompts/: prompts.json
scripts/: enable_stable_flags.sh  init_rabbitmq.sh  nginx-start.sh  run-worker.sh  venv.sh
temp/: temp-index-document.html  temp-index.html
templates/: 404.html  base.html  categories.html  document-1.html  document-detail.html  document.html  home.html  index.html  xxx-todo.html
templates/elements/: header.html
workers/: analysis_worker.py
xxx/: xxx-format-analysis-to-html.py
