[project]
name = "eternyiq"
version = "0.1.0"
description = ""
authors = [
    {name = "Jan Filips",email = "janfilipsgt@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
