[project]
name = "eternyiq"
version = "0.1.0"
description = ""
authors = [
    {name = "Jan Filips",email = "janfilipsgt@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "itsdangerous (>=2.2.0,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "pydantic (>=2.11.4,<3.0.0)",
    "pre-commit (>=4.2.0,<5.0.0)",
    "openai (>=1.78.0,<2.0.0)",
    "humanize (>=4.12.3,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
